# valhalla

./: .env.example  .gitignore  .gitlab-ci.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  docker-compose.yml  go.mod  go.sum  setup.sh
deployments/: .env.example  Caddyfile  Dockerfile  Dockerfile.web  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh  setup.sh
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: lib.rs  main.rs
docs/: 01-executive-summary.md  02-feature-liste.md  02-ms-teams-business-features-analyse.md  03-ui-screens-navigation.md  04-architektur.md  05-protokolle.md  06-schlussfolgerungen.md  07-abschlussmatrix.md  08-staerken-schwaechen.md  09-zukunfts-features.md  10-design-workflows.md  11-discord-nutzerfeedback-recherche.md  12-discord-rechtestruktur.md  13-rbac-rollenmatrix.md  BETA-CHECKLIST.md  GUIDE.md  README.md  TECH-DECISIONS.md  TODO.md  kernkonzept.md  openapi.yaml
e2e/: api_test.go  package-lock.json  package.json  playwright.config.ts
logo/: valhalla.xcf
migrations/: 000001_initial_schema.down.sql  000001_initial_schema.up.sql  000002_kanban_wiki_polls_bots.down.sql  000002_kanban_wiki_polls_bots.up.sql  000003_enterprise.down.sql  000003_enterprise.up.sql  000004_attachments_nullable.down.sql  000004_attachments_nullable.up.sql  000005_user_deletion.down.sql  000005_user_deletion.up.sql  000006_constraints_indexes.down.sql  000006_constraints_indexes.up.sql  000007_password_reset.up.sql  000008_reports.up.sql  000009_message_partitioning_prep.down.sql  000011_mfa.down.sql  (+8 more)
(+231 files in other folders)
