[package]
name = "valhalla-desktop"
version = "0.1.0"
description = "Valhalla Desktop Client"
authors = ["Christian Schmitt <schmiddy83@gmail.com>"]
edition = "2021"

[lib]
name = "valhalla_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "protocol-asset"] }
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-updater = "2"
tauri-plugin-window-state = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
